# samplex

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  setup.cfg
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/source/: conf.py
examples/: bayesian_linear_regression.py  emcee_test.py  linear_regression.py  linear_regression_HMC.py  linear_regression_emcee.py
src/samplex/: plotting.py  samplers.py  samplex.py  template.mplstyle  utils.py
src/samplex/samplers/: HMC_sampler.py  MH_Gaussian_sampler.py  emcee_sampler.py
test_factory/: first_data.py  leapfrog.ipynb  walker.py  walker_ND.py
