[metadata]
name = samplex
version = 0.0.1
author = Thomas Edwards, Nashwan Sabti
author_email = tedwards2412@gmail.com
url = https://github.com/tedwards2412/samplex
description = Samplers in MLX
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sampling, inference, machine learning, autodiff, mlx
license = MIT

[options]
packages_dir=
    =src
packages = find:
install_requires =
    numpy
    tqdm
    mlx
    
python_requires =  >=3.9

[options.packages.find]
where=src